exports[`Onboarding should render different components 1`] = `
<div
  className="wizard welcome">
  <div
    className="wizard-main">
    <img
      alt="logo"
      src="test-file-stub" />
    <h1 />
  </div>
  <button
    className="coz-btn coz-btn--regular wizard-button"
    onClick={[Function]}
    role="button" />
</div>
`;

exports[`Onboarding should render different components 2`] = `
<div
  className="wizard">
  <div
    className="wizard-main">
    <p />
    <input
      onChange={undefined}
      placeholder={undefined}
      type="url"
      value={undefined} />
    <p />
  </div>
  <button
    className="coz-btn coz-btn--regular wizard-button"
    onClick={undefined}
    role="button" />
</div>
`;

exports[`Onboarding should render the BackupPhotosVideos screen 1`] = `
<div
  className="wizard activation">
  <div
    className="wizard-main">
    <img
      alt="logo"
      src="test-file-stub" />
    <h1 />
    <p />
  </div>
  <a
    onClick={undefined} />
  <button
    className="coz-btn coz-btn--regular wizard-button wizard-button--with-circles"
    onClick={undefined}
    role="button" />
  <div
    className="wizard-circles">
    <span
      className="wizard-circles__circle wizard-circles__circle--active" />
    <span
      className="wizard-circles__circle" />
    <span
      className="wizard-circles__circle" />
    <span
      className="wizard-circles__circle" />
  </div>
</div>
`;

exports[`Onboarding should render the SelectServer screen 1`] = `
<div
  className="wizard">
  <div
    className="wizard-main">
    <p />
    <input
      onChange={undefined}
      placeholder={undefined}
      type="url"
      value={undefined} />
    <p />
  </div>
  <button
    className="coz-btn coz-btn--regular wizard-button"
    onClick={undefined}
    role="button" />
</div>
`;

exports[`Onboarding should render the welcome screen 1`] = `
<div
  className="wizard welcome">
  <div
    className="wizard-main">
    <img
      alt="logo"
      src="test-file-stub" />
    <h1 />
  </div>
  <button
    className="coz-btn coz-btn--regular wizard-button"
    onClick={undefined}
    role="button" />
</div>
`;
